--- a/MYDE/i3/config
+++ b/MYDE/i3/config
@@ -34,7 +34,7 @@ new_window pixel 1
 #         Gaps
 ###############################
 # Set inner/outer gaps
-gaps inner 20
+gaps inner 5
 gaps outer 0
 
 ##############################
@@ -94,16 +94,16 @@ bindsym $mod+r mode "resize"
 ######################################
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+Return exec st
 
 # ibus
 bindsym $mod+Shift+b exec ibus-setup
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # exit-menu
-bindsym $mod+Shift+e exec ~/.config/i3/scripts/powermenu
+bindsym $mod+x exec ~/.config/i3/scripts/powermenu
 
 # Lock the system
 bindsym $mod+Shift+x exec i3lock -i ~/Pictures/backgrounds/fogpine1.png
@@ -115,7 +115,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # Rofi
-bindsym $mod+d exec --no-startup-id rofi -show drun -disable-history -show-icons
+bindsym $mod+space exec --no-startup-id rofi -show drun -disable-history -show-icons
 bindsym Mod1+d exec --no-startup-id rofi -show run -disable-history -show-icons
 bindsym Mod1+w exec rofi -show window -show-icons
 
@@ -152,7 +152,7 @@ bindsym $mod+a split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
+bindsym $mod+shift+s layout stacking
 bindsym $mod+e layout tabbed
 bindsym $mod+t layout toggle split
 
@@ -160,15 +160,15 @@ bindsym $mod+t layout toggle split
 bindsym $mod+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+q focus mode_toggle
+bindsym $mod+shift+q focus mode_toggle
 
 # focus the parent container
 bindsym $mod+p focus parent
 
 
 ## App shortcuts
-bindsym $mod+w exec /usr/bin/firefox
-bindsym $mod+n exec /usr/bin/pcmanfm
+bindsym $mod+w exec /usr/bin/brave	
+bindsym $mod+s exec /usr/bin/pcmanfm
 bindsym Print exec flameshot full --path ~/Pictures/screenshots
 bindsym $mod+Print exec flameshot gui --path ~/Pictures/screenshots
 
@@ -226,22 +226,22 @@ for_window [class=Nitrogen] focus
 #############################################
 
 #get auth work with polkit-gnome
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id lxpolkit &
 
 #exec --no-startup-id dex -a -s /etc/xdg/autostart/:~/.config/autostart/
 exec --no-startup-id dex --autostart --environment i3
 
 # uncomment the next line, use arandr to setup displays and save the file as monitor:
-exec --no-startup-id ~/.screenlayout/monitor.sh
+# exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
 exec nitrogen --restore &
 
 # Compositor
-exec_always picom
+exec_always picom --config ~/.config/picom/picom.conf
 
 # set powersavings for display:
-exec --no-startup-id xset s 480 dpms 600 600 600
+# exec --no-startup-id xset s 480 dpms 600 600 600
 
 # disable power saving (for example if using xscreensaver)
 exec_always xset -dpms
@@ -250,7 +250,7 @@ exec_always xset -dpms
 bindsym $mod+Shift+n exec --no-startup-id nm-applet
 
 # Xrandr Commands
-exec_always xrandr -s 1920x1080 -r 75
+# exec_always xrandr -s 1920x1080 -r 75
 exec_always xset s off
 
 ##################
