--- a/MYDE/polybar/config.ini
+++ b/MYDE/polybar/config.ini
@@ -66,7 +66,7 @@ font-2 = Font Awesome 6 Free Solid:pixelsize=10;2
 font-3 = Font Awesome 6 Brands:pixelsize=10;2
 modules-left = rofi i3  xwindow
 modules-center = date
-modules-right = kernel filesystem cpu temp memory pulseaudio power
+modules-right = kernel filesystem cpu memory pulseaudio power
 cursor-click = pointer
 ;cursor-scroll = ns-resize
 enable-ipc = true
@@ -80,7 +80,7 @@ tray-background =${colors.yellow-alt}
 ;==========================================================
 [module/rofi]
 type=custom/text
-content=" Arch "
+content=" DocFaizaL "
 click-left= exec rofi -show drun -disable-history -show-icons &
 content-foreground=${colors.black}
 content-background=${colors.orange-alt}
@@ -105,7 +105,7 @@ enable-scroll = false
 ; Useful if you want to show monitor specific workspaces
 ; on different bars
 ; Default: false
-pin-workspaces = true
+pin-workspaces = false
 ; Show urgent workspaces regardless of whether the workspace is actually hidden 
 ; by pin-workspaces.
 ; Default: false
