changed some modules

--- a/MYDE/polybar/config.ini
+++ b/MYDE/polybar/config.ini
@@ -50,7 +50,7 @@ transparent=#00000000
 [bar/example]
 width = 100%
 height = 15pt
-radius = 0
+radius = 5
 dpi = 100
 background = ${colors.dark}
 foreground = ${colors.yellow}
@@ -64,9 +64,9 @@ font-0 = "Roboto condensed:size=10:weight=bold;2"
 font-1 = Font Awesome 6 Free:pixelsize=10;2
 font-2 = Font Awesome 6 Free Solid:pixelsize=10;2
 font-3 = Font Awesome 6 Brands:pixelsize=10;2
-modules-left = rofi i3  xwindow
+modules-left = rofi i3 xwindow
 modules-center = date
-modules-right = kernel filesystem cpu memory pulseaudio power
+modules-right = kernel filesystem cpu pulseaudio power
 cursor-click = pointer
 ;cursor-scroll = ns-resize
 enable-ipc = true
@@ -81,7 +81,7 @@ tray-background =${colors.yellow-alt}
 [module/rofi]
 type=custom/text
 content=" DocFaizaL "
-click-left= exec rofi -show drun -disable-history -show-icons &
+click-left= exec rofi -show drun &
 content-foreground=${colors.black}
 content-background=${colors.orange-alt}
 
