--- a/MYDE/picom/picom.conf
+++ b/MYDE/picom/picom.conf
@@ -1,118 +1,83 @@
+corner-radius= 14
+shadow = false;
+shadow-radius = 0;
+shadow-offset-x = -10;
+shadow-offset-y = -10;
+shadow-opacity = 0.6;
+shadow-red = 0.0;
+shadow-green = 0.0;
+shadow-blue = 0.0;
+shadow-exclude = [
+        
+                     "name = 'stalonetray'",
+                     "name = 'root-menu'",
+                     "name = 'tint2'",
+                     "name = 'polybar'",
+                     "name = 'plank'",
+                     "name = 'Notification'",
+                     "name = 'fluxbox'",
+                     "class_g = 'bspwm'",
+                     "class_i = 'presel_feedback'",
+                     "class_g = 'fluxbox'",
+                     "class_g ?= 'Notify-osd'",
+                     "class_g = 'xfce4-panel'",
+                     "class_i = 'POWERPNT.EXE'",
+                     "class_i = 'WINWORD.EXE'",
+                     "class_i = 'Meteo'"
+                  ];
+shadow-ignore-shaped = false;
+inactive-opacity = 1.0;
+active-opacity = 1.0;
+frame-opacity = 1.0;
+inactive-opacity-override = false;
+opacity-rule = [
+                   "10:class_g = 'Bspwm'",
+                   "10:class_i = 'presel_feedback'",
+                ];
+wintypes :
+{
+    popup_menu =
+    {
+        opacity = 1.0;
+    };
+    dropdown_menu =
+    {
+        opacity = 1.0
+    };
+    dnd =
+    {
+        shadow = false;
+    };
+    dock =
+    {
+        shadow = true;
+    };
+    tooltip =
+    {
+        fade = true;
+        shadow = false;
+        opacity = 1.0;
+        focus = true;
+    };
+};
+# Fading
+fading = true;
+fade-delta = 5;
+fade-in-step = 0.3;
+fade-out-step = 0.03;
 #################################
 #          Animations           #
 #################################
-# requires https://github.com/jonaburg/picom
-# (These are also the default values)
-transition-length = 220
-transition-pow-x = 0.5
-transition-pow-y = 0.5
-transition-pow-w = 0.5
-transition-pow-h = 0.5
-size-transition = true
-
-
-#################################
-#             Corners           #
-#################################
-# requires: https://github.com/sdhand/compton or https://github.com/jonaburg/picom
-corner-radius = 5;
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
-
-#################################
-#             Shadows           #
-#################################
-
-
-shadow = true;
-shadow-radius = 10;
-shadow-opacity = 5
-shadow-offset-x = -7;
-shadow-offset-y = -7;
-
-# shadow-exclude = []
-shadow-exclude = [
-  "name = 'Notification'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-
-#################################
-#           Fading              #
-#################################
-fading = true;
-fade-in-step = 0.95;
-fade-out-step = 0.95;
-#fade-delta = 5
-
-#################################
-#   Transparency / Opacity      #
-#################################
-inactive-opacity = 0.90;
-frame-opacity = 100;
-inactive-opacity-override = true;
-active-opacity = 100;
-
-# focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'",
-"class_g='firefox'",
-"class_g='TelegramDesktop'",
-"class_g='Code'"
-];
-
-# opacity-rule = []
-opacity-rule = [
-"95:class_g='Code'",
-"95:class_g='Alacritty' && focused",
-"95:class_g='Pcmanfm'",
-
-];
-
-#################################
-#     Background-Blurring       #
-#################################
-
-blur-method ="dual_kawase";
-#blur-size = 7
-#
-# blur-deviation = false
-#
-blur-strength = 6
-blur-kern = "3x3box";
-
-
-# Exclude conditions for background blur.
-# blur-background-exclude = []
-blur-background-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'",
-  "_GTK_FRAME_EXTENTS@:c"
-];
-
-#################################
-#       General Settings        #
-#################################
-#experimental-backends = true;
+animations: true;
+animation-stiffness = 250
+animation-window-mass = 0.7
+animation-dampening = 20
+animation-clamping = true
+animation-for-open-window = "zoom"; #open window
+animation-for-unmap-window = "zoom"; #minimize window
+animation-for-menu-window = "zoom";
+animation-for-transient-window = "zoom"; #popup windows
+animation-for-workspace-switch-in = "zoom"; #the windows in the workspace that is coming in
+animation-for-workspace-switch-out = "zoom"; #the windows in the workspace that are coming out
 backend = "glx";
-vsync = true
-mark-wmwin-focused = true;
-mark-ovredir-focused = true;
-detect-rounded-corners = true;
-detect-client-opacity = true;
-refresh-rate = 75;
-detect-transient = true
-detect-client-leader = true
-use-damage = false
-log-level = "info";
-#
-wintypes:
-{
-  normal = { fade = true; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 1; focus = true; full-shadow = false; };
-  dock = { shadow = false; }
-  dnd = { shadow = false; }
-  popup_menu = { opacity = 1; fade = false; }
-  dropdown_menu = { opacity = 1; fade = false; }
-};
+vsync = true;
